# dsfr-design-md

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  preview-dark.html  preview.html  pyproject.toml
.moon/: workspace.yml
apps/e2e-tests/: moon.yml  pyproject.toml
apps/e2e-tests/tests/: test_stitch_design.py  test_stitch_schema_bisection.py
scripts/: build-decisions.py  build-previews.py  dsfr_version.py
