[project]
name = "e2e-tests"
version = "0.1.0"
description = "E2E Tests for Stitch MCP integration"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
